Added some child theme files and added Bootstrap to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 /handcrafted-wp-theme-master/*
 /twentythirteen/*
 /twentytwelve/*
+/arkane2013/css/bootstrap.css
+/arkane2013/css/bootstrap.min.css
+/arkane2013/js/bootstrap.js
+/arkane2013/js/bootstrap.min.js
+/arkane2013/img/glyphicons-halflings.png
+/arkane2013/img/glyphicons-halflings-white.png
 index.php
